--- a/user-input-with-forms/studio/index.html
+++ b/user-input-with-forms/studio/index.html
@@ -1,19 +1,38 @@
 <!doctype html>
-
 <head>
-	<meta charset="utf-8">
-	<script>
-		// TODO: create a handler
-    window.addEventListener("load", function(){
-        // TODO: register the handler
-    });
-	</script>
+   <meta charset="utf-8">
+   <script>
+      function setSearchEngine() {
+		let actionURL;
+      let searchForm = document.getElementById("searchForm")
+		let rad = document.querySelector("input[name=engine]:checked");
+      let actions={
+         "google"    : "https://www.google.com/",
+         "ask"       :"https://www.ask.com/",
+         "duckduckgo":"https://duckduckgo.com/",
+         "bing"      : "https://bing.com"
+         }
+        actionURL = actions[rad.value];
+        searchForm.setAttribute("action",actionURL)
+		
+	}
+// TODO: create a handler
+window.addEventListener("load", function () {
+  // TODO: register the handler
+  let form = document.getElementById("searchForm");
+  form.addEventListener("submit", setSearchEngine)
+});
+   </script>
 </head>
-
 <body>
-
-	<form id="searchForm">
-    <!-- TODO: add form elements -->
-	</form>
-
+   <form id="searchForm" >
+      <label> <input type="text" name="q"/></label>
+      <label>Google<input type="radio" name="engine" value="google"></label>
+      <label> DuckDuckgo<input type="radio" name="engine" value="duckduckgo"/></label>
+      <label>Bing<input type="radio" name="engine" value="bing"/></label> 
+      <label>Ask<input type="radio" name="engine" value="ask"/></label> 
+      <button id="submit" value="go">Go</button>
 </body>
+</form>
+</body>
+</html>
